| Summary: | ASTERISK-26144: Crash on loading codecs g729/g723 | ||
| Reporter: | Alexei Gradinari (alexei gradinari) | Labels: | |
| Date Opened: | 2016-06-23 16:44:10 | Date Closed: | 2016-06-29 12:26:13 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | Codecs/General |
| Versions: | 13.10.0-rc1 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ( 0) bt.txt | |
| Description: | Asterisk 13.10.0-rc1 crashed on startup when loading codecs g729/g723.
The codecs g729 and g723 are binary codec_g723-ast130-gcc4-glibc2.2-x86_64-core2.so codec_g729-ast130-gcc4-glibc2.2-x86_64-core2.so There isn't issue with these codecs with Asterisk 13.9 | ||
| Comments: | By: Asterisk Team (asteriskteam) 2016-06-23 16:44:11.943-0500 The severity of this issue has been automatically downgraded from "Blocker" to "Major". The "Blocker" severity is reserved for issues which have been determined to block the next release of Asterisk. This severity can only be set by privileged users. If this issue is deemed to block the next release it will be updated accordingly during the triage process. By: Asterisk Team (asteriskteam) 2016-06-23 16:44:12.086-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. By: Alexei Gradinari (alexei gradinari) 2016-06-23 16:47:35.240-0500 backtrace By: Malcolm Davenport (mdavenport) 2016-06-23 16:51:38.088-0500 Since Digium doesn't provide a codec binary for G.723.1, we only provide a hardware based transcoding card for G.723.1, these can't be from Digium. That likely means they're not properly licensed. That's unfortunate. By: Alexei Gradinari (alexei gradinari) 2016-06-23 17:18:41.457-0500 Malcolm, Is this issue tracker for Digium Asterisk or open source Asterisk? Is the open source asterisk allowed to use only Digium provided codec binary? I created this issue because the release 13.10.0-rc1 broken the ABI compatibility for external codec modules. Please, reopen this issue. By: Asterisk Team (asteriskteam) 2016-06-23 17:18:41.684-0500 This issue has been reopened as a result of your commenting on it as the reporter. It will be triaged once again as applicable. By: Joshua C. Colp (jcolp) 2016-06-23 17:27:21.437-0500 The issue tracker is for open source Asterisk, but it is our policy that third party modules are not supported here. In the case of G729 only the Digium licensed codec can be legally used with Asterisk. Since this issue would also impact that commercial module it will be looked into. | ||